<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterOTPActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="-659dp"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="251dp"
            android:layout_height="153dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="100dp"
            android:gravity="center"

            android:orientation="horizontal"
            android:paddingTop="15sp"
            tools:layout_marginLeft="40dp"
            tools:layout_marginRight="30dp"
            tools:layout_marginTop="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_otp_received1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/otp"
                android:layout_width="183dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/enter_otp"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="327dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/verifOtp"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:background="#F8F690"
                android:padding="10dp"
                android:text="@string/verifyotp1"
                android:textAlignment="center"
                android:textSize="14sp"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="327dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/validation"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:background="#F8F690"
                android:padding="10dp"
                android:text="@string/validate_transaction"
                android:textAlignment="center"
                android:textSize="14sp"

                />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
