<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBenefActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:text="@string/benef"
        android:textAlignment="center"
        android:textColor="@color/main_green"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="292dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:textColorHint="@color/main_grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        tools:ignore="DuplicateIds,UnknownId,TextContrastCheck" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="292dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/lasttname"
        android:inputType="textPersonName"
        android:textColorHint="@color/main_grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/telephone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        tools:ignore="UnknownId,TextContrastCheck" />

    <EditText
        android:id="@+id/telephone"
        android:layout_width="292dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/tel"
        android:inputType="textPersonName"
        android:textColorHint="@color/main_grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/customer_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        tools:ignore="UnknownId,TextContrastCheck" />

    <Button
        android:id="@+id/customer_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_login_PAC"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_page_buttons"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/Save"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,UnknownId,UnknownIdInLayout"
        tools:layout_editor_absoluteY="433dp" />
</androidx.constraintlayout.widget.ConstraintLayout>