<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@drawable/background"
        android:contentDescription="@string/todo"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-109dp" />

    <TextView
        android:id="@+id/home_sib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <EditText
        android:id="@+id/user_login_registrationNo"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:backgroundTint="#1e7888"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textColorHint="#37474F"
        android:textCursorDrawable="@drawable/blinking_cursor_colour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_sib"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/user_login_registrationNo2"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:autofillHints=""
        android:backgroundTint="#1e7888"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textColorHint="#37474F"
        android:textCursorDrawable="@drawable/blinking_cursor_colour"
        app:layout_constraintBottom_toTopOf="@+id/customer_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_sib"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/customer_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="184dp"
        android:background="@drawable/login_page_buttons"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>